# WinitTest

./: .gitignore  CROSS_PLATFORM.md  Cargo.toml  LICENSE  README.md  build.rs  change.sh  change_by_json.sh  mobile.toml  ren-rs.config.json
.github/workflows/: android.yml  build.yml  ios.yml
src/: lib.rs
src/ui/: main_window.slint
src/ui/components/: my_light_text.slint  my_menu_button.slint
src/utils/: config.rs  constant.rs  mod.rs  path.rs
