[package]
name = "ren-rs-refactor"
description = "VN Engine for Ren Rs!"
version = "0.1.0"
authors = ["xphost <xphost@foxmail.com>"]
edition = "2024"
license = "Apache 2.0"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ren-rs-refactor-desktop"
path = "gen/bin/desktop.rs"

[package.metadata.winres]
LegalCopyright = "Copyright © 2026"
FileDescription = "VN Engine for Ren Rs!"

[dependencies]
slint = { version = "1.17", default-features = false, features = [
    "std",
    "compat-1-2",
    "renderer-skia",
    "renderer-software",
    "backend-winit",
    "backend-android-activity-06",
] }
log = "^0.4"
# serde
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# self add
rusqlite = { version = "^0.40", features = ["bundled"] } # Rust SQLite wrapper!
aes = "^0.9"
base64 = "^0.22"

[build-dependencies]
slint-build = "^1.16"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.15"
ndk-glue = "^0.7"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "^5.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "^0.1"

[target.'cfg(all(not(target_os = "android"), not(target_os = "ios")))'.dependencies]
dirs = "^6.0"

[target.'cfg(any(all(target_os = "windows", target_arch = "x86_64"), all(target_os = "macos", target_arch = "aarch64"), target_os = "linux"))'.dependencies]
steamworks = "^0.13"
